src/objects/SomDig_WtAgBeziehung__c.object
<CustomObject>
    <fields>
        <fullName>SomDig_Werbetreibender__c</fullName>
        <description>Hinterlegung des Werbetreibeder-Accounts in der Beziehung</description>
        <inlineHelpText>Hinterlegung des Werbetreibeder-Accounts in der Beziehung</inlineHelpText>
        <label>Werbetreibender</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012200000004c9A</value>
            </filterItems>
            <infoMessage>Datensatztyp des ausgewählten Accounts muss &quot;Werbetreibender&quot; sein, was aktuell nicht der Fall ist. Daher bitte am Account den Datensatztyp vorher noch ändern.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>WT AG Beziehungen (Werbetreibender)</relationshipLabel>
        <relationshipName>WT_Beziehungen</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SomDig_YieldlabNettoAJ__c</fullName>
        <description>Yieldlab Nettoumsatz aktuelles Jahr</description>
        <inlineHelpText>Yieldlab Nettoumsatz aktuelles Jahr</inlineHelpText>
        <label>Yieldlab Netto AJ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_LetzterUmsatz__c</fullName>
        <description>Gibt die Jahreszahl aus, in dem das letzte Mal Umsatz für verbucht wurde.</description>
        <inlineHelpText>Gibt die Jahreszahl aus, in dem das letzte Mal Umsatz für verbucht wurde.</inlineHelpText>
        <label>Letzter Umsatz</label>
        <summarizedField>SomDig_Umsatz__c.SomTv_JahrDatum__c</summarizedField>
        <summaryForeignKey>SomDig_Umsatz__c.SomDig_WtAgBeziehung__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>WT AG Beziehung</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SomDig_Agentur__c</columns>
        <columns>SomDig_Werbetreibender__c</columns>
        <columns>SomDig_BeziehungInhaber__c</columns>
        <columns>SomDig_BeziehungInhaberVertriebsteam__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>mit_Yieldlab_Umsatz_AJ</fullName>
        <columns>SomDig_BeziehungAccountnameHelp__c</columns>
        <columns>SomDig_Agentur__c</columns>
        <columns>NAME</columns>
        <columns>SomDig_YieldlabNettoAJ__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SomDig_YieldlabNettoAJ__c</field>
            <operation>notEqual</operation>
            <value>EUR 0</value>
        </filters>
        <label>mit Yieldlab Umsatz AJ</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>WT AG Beziehungsname</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WT AG Beziehungen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SomDig_AenderungAgentur</fullName>
        <active>true</active>
        <description>Es soll vermieden werden, dass nach Erstellung einer WT AG Beziehung diese geändert wird: WT geht nicht wegen Master-Detail, Agentur-Feld muss zwecks Erstellung bearbeitbar sein und daher hier eine Validierung um dies zu verhindern</description>
        <errorConditionFormula>And(
Not( ISNEW() ),
 ISCHANGED( SomDig_Agentur__c ) 
)</errorConditionFormula>
        <errorMessage>Bitte keine Agentur nachträglich ändern, sondern die Beziehung so lassen wie sie  angelegt wurde bezüglich Auswahl WT und AG. Wenn notwendig, bitte neue Beziehung mit unterschiedlicher AG anlegen</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SomDig_KontrolleDatensatztypAccounts</fullName>
        <active>true</active>
        <description>Es darfgenerell kein Datensatztyp &quot;ungültiger Account&quot; bei WT oder AG ausgewählt werden sowie kein Datensatztyp WT bei AG und vise versa.</description>
        <errorConditionFormula>AND(
$Profile.Id != $Label.ProfileIdAdmin, 
ISNEW(),
OR(
  SomDig_Agentur__r.RecordType.Id = &apos;012D0000000QYxb&apos;,
  SomDig_Agentur__r.RecordType.Id = &apos;012200000004c9A&apos;,
  SomDig_Werbetreibender__r.RecordType.Id = &apos;012D0000000QYxb&apos;,
  SomDig_Werbetreibender__r.RecordType.Id = &apos;012D0000000QgmP&apos;
  )
)</errorConditionFormula>
        <errorMessage>Es darf generell kein Datensatztyp &quot;ungültiger Account&quot; bei WT oder AG ausgewählt werden sowie kein Datensatztyp WT bei AG und vise versa. Bitte Datensatztypen der verlinkten Accounts kontrollieren und ggf. anpassen!</errorMessage>
    </validationRules>
</CustomObject>